# gps_cloud_alignment

./: README.md
Cloud_Alignment/: CMakeLists.txt  CMakeLists.txt~  camera_pos_list  gps  gps_utils.cpp  gps_utils.cpp~  gps_utils.h~  main.cpp  main.cpp~
Cloud_Alignment/gps_visor/: gps_cameras  result.html  visor.py
Cloud_Alignment/gps_visor/testing_files/: gps_cameras_100  gps_cameras_100_out.html  gps_cameras_gps_cloud_out.html  gps_cameras_out.html  gps_cloud_100  gps_cloud_100_out.html  gps_cloud_out.html  index.html  test_01.html
Cloud_Alignment/src/: gps_utils.cpp  gps_utils.h  pointcloud_utils.cpp  pointcloud_utils.h  similarity_transf.cpp  similarity_transf.h
